--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <h1>first - for main</h1>
   <h2>second - for main</h2>
   <h3>third - for main</h3>
+
+  <span>1 - js1</span>
+  <span>2 - js1</span>
+  <span>3 - js1</span>
 </body>
 
 </html>
