for main modify

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>first - for main</h1>
   <h2>second - for main</h2>
-  <h3>third - for main</h3>
+  <h3>third - for main modify~</h3>
 </body>
 
 </html>
